--- a/Delivery Service/Styles/Styles.xaml
+++ b/Delivery Service/Styles/Styles.xaml
@@ -107,7 +107,7 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
                             <Setter Property="Background" Value="#56adf4"/>
-                            <Setter Property="Foreground" Value="AliceBlue"/>
+                            <Setter Property="Foreground" Value="CadetBlue"/>
                         </Trigger>
 
                         <Trigger Property="IsChecked" Value="False">
@@ -177,6 +177,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     
     <!--Rounded StackPanel Style-->
     <Style x:Key="RoundedStackPanelStyle" TargetType="StackPanel">
