--- a/Delivery Service/Styles/Styles.xaml
+++ b/Delivery Service/Styles/Styles.xaml
@@ -107,7 +107,7 @@
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="True">
                             <Setter Property="Background" Value="#56adf4"/>
-                            <Setter Property="Foreground" Value="CadetBlue"/>
+                            <Setter Property="Foreground" Value="DarkBlue"/>
                         </Trigger>
 
                         <Trigger Property="IsChecked" Value="False">
