--- a/Delivery Service/Views/Pages/Admin/AddDishPage.xaml
+++ b/Delivery Service/Views/Pages/Admin/AddDishPage.xaml
@@ -54,26 +54,19 @@
                     Width="300" 
                     HorizontalAlignment="Left" 
                     Click="OrderList_Click" 
-                    Margin="411,19,0,0" VerticalAlignment="Top" />
-
-            <Button Content="Курьеры" 
-                    Style="{StaticResource CustomButtonStyle}" 
-                    Height="50" 
-                    Width="300" 
-                    HorizontalAlignment="Left" 
-                    Command="{Binding }" Margin="47,19,0,0" VerticalAlignment="Top" />
+                    Margin="74,23,0,0" VerticalAlignment="Top" />
 
             <Button Content="Список блюд" 
                     Style="{StaticResource CustomButtonStyle}" 
                     Height="50" 
                     Width="300" 
-                    Margin="0,20,501,0" 
+                    Margin="0,23,839,0" 
                     VerticalAlignment="Top" 
-                    HorizontalAlignment="Right" 
+                    HorizontalAlignment="Right"
                     Click="Button_Click" />
         </Grid>
 
-        <Grid x:Name="ListAndSingleViews" Grid.Row="1" Margin="0,0,0,106">
+        <Grid x:Name="ListAndSingleViews" Grid.Row="1" Margin="0,0,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="800"/>
                 <ColumnDefinition Width="800"/>
@@ -95,9 +88,9 @@
 
                 <TextBlock Text="Новое блюдо" Style="{StaticResource ListTextBlock}" FontSize="18" Foreground="black"/>
                 <Label Content="Название:" Style="{StaticResource LabelStyle}" />
-                <TextBox Text="{Binding DishName}" FontSize="16" Height="30" Width="772"/>
+                <TextBox Text="{Binding DishName}" FontSize="16" Height="30" Width="700" HorizontalAlignment="Left"/>
                 <Label Content="Описание:" Style="{StaticResource LabelStyle}" />
-                <TextBox Text="{Binding DishTitle}" FontSize="16" Height="80" Width="781"/>
+                <TextBox Text="{Binding DishTitle}" FontSize="16" Height="80" Width="700" HorizontalAlignment="Left" TextWrapping="Wrap"/>
                 <Label Content="Вес (грамм):" Style="{StaticResource LabelStyle}" Width="105" HorizontalAlignment="Left"/>
                 <TextBox Text="{Binding DishWeight}" FontSize="16" Width="120" HorizontalAlignment="Left" />
                 <Label Content="Цена:" Style="{StaticResource LabelStyle}" Width="100" HorizontalAlignment="Left" />
